Issue #3144 - Modals for Research Outputs page Changes in this PR: - modal for 'add a repository' and 'add a metadata standard' fixed - alignment for the above sorted - removed padding from .btn-default

--- a/app/assets/stylesheets/blocks/_buttons.scss
+++ b/app/assets/stylesheets/blocks/_buttons.scss
@@ -32,7 +32,6 @@
   outline: none;
   margin-top: 5px;
   margin-bottom: 10px;
-  padding: 5px 12px;
   text-align: center;
   text-decoration: none;
   border-radius: 0rem;
